--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,16 +5,16 @@ orbs:
 jobs:
   build:
     docker:
-      - image: 218546966473.dkr.ecr.us-east-1.amazonaws.com/circle-ci:stitch-tap-tester
+      - image: 218546966473.dkr.ecr.us-east-1.amazonaws.com/circle-ci:stitch-tap-tester-uv
     steps:
       - checkout
       - run:
           name: 'Setup virtual env'
           command: |
-            python3 -mvenv /usr/local/share/virtualenvs/tap-crossbeam
+            uv venv --python 3.9 /usr/local/share/virtualenvs/tap-crossbeam
             source /usr/local/share/virtualenvs/tap-crossbeam/bin/activate
-            pip install -U pip setuptools
-            pip install .[test]
+            uv pip install -U pip setuptools
+            uv pip install .[test]
       - run:
           name: 'JSON Validator'
           command: |
